Added repo url in config

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ plugins:
   - jekyll-sass-converter
   - jekyll-relative-links
 
+repository: https://github.com/2sugarcubes/2sugarcubes.github.io
+
 markdown: kramdown
 highlighter: rouge
 kramdown:
