--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "astrolabe"]
-	path = _astrolabe
+	path = _astrograph
 	url = https://github.com/2sugarcubes/astrolabe
+	branch = master
+[submodule "_astrograph"]
+	path = _astrograph
+	url = https://github.com/2sugarcubes/astrograph
