--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -40,9 +40,9 @@ jobs:
           ruby-version: "3.3" # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
-      #- uses: jetli/wasm-pack-action@v0.4.0
-      #- name: Pack Astrolabe
-      #  run: wasm-pack build --release --target web -d ../../js/astro --out-name main _astrolabe/wasm
+      - uses: jetli/wasm-pack-action@v0.4.0
+      - name: Pack Astrolabe
+        run: wasm-pack build --release --target web -d ../../js/astro --out-name main _astrolabe/wasm
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
