fix: excluded files that should not be added to the website

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,12 @@ plugins:
 
 repository: 2sugarcubes/2sugarcubes.github.io
 
+exclude:
+  - Dockerfile
+  - docker-compose.yml
+  - makefile
+  - readme.md
+
 markdown: kramdown
 highlighter: rouge
 kramdown:
