--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -42,8 +42,7 @@ jobs:
           cache-version: 0 # Increment this number if you need to re-download cached gems
       - uses: jetli/wasm-pack-action@v0.4.0
       - name: Get Astrolabe
-        run: wget -qO- wget -qO- https://github.com/2sugarcubes/astrograph/releases/download/v0.1.0/wasm.tar.gz |
-		        tar xvz -C js/astro/ --overwrite --strip-components 2
+        run: wget -qO- wget -qO- https://github.com/2sugarcubes/astrograph/releases/download/v0.1.0/wasm.tar.gz | tar xvz -C js/astro/ --overwrite --strip-components 2
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
