fix(config): resolve date issue when building in CI

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ plugins:
 repository: 2sugarcubes/2sugarcubes.github.io
 
 exclude:
+  - vendor
   - Dockerfile
   - docker-compose.yml
   - makefile
